[gd_scene load_steps=4 format=2]

[ext_resource path="res://stages/Ice/platform.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 158.192, 700 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 124.378, 102.965 )

[node name="Platform" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="." index="0"]

visible = false
polygon = PoolVector2Array( -140.28, -109.854, 192.034, -109.854, 209.657, 116.724, -137.762, 129.312 )
uv = PoolVector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Top" type="StaticBody2D" parent="Polygon2D" index="0"]

position = Vector2( 0, -800 )
input_pickable = false
collision_layer = 32
collision_mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Polygon2D/Top" index="0"]

shape = SubResource( 1 )

[node name="Mid" type="StaticBody2D" parent="Polygon2D" index="1"]

input_pickable = false
collision_layer = 32
collision_mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Polygon2D/Mid" index="0"]

position = Vector2( 16.55, 0 )
scale = Vector2( 1.22503, 1 )
shape = SubResource( 2 )

[node name="Bottom" type="StaticBody2D" parent="Polygon2D" index="2"]

position = Vector2( 0, 800 )
input_pickable = false
collision_layer = 32
collision_mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Polygon2D/Bottom" index="0"]

shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="Polygon2D" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Polygon2D/Area" index="0"]

position = Vector2( 16.55, 0 )
scale = Vector2( 1.22503, 1 )
shape = SubResource( 2 )

[node name="Active" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="Inactive" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[connection signal="body_exited" from="Polygon2D/Area" to="." method="_on_Area_body_exited"]

[connection signal="timeout" from="Active" to="." method="_on_Active_timeout"]

[connection signal="timeout" from="Inactive" to="." method="_on_Inactive_timeout"]


